--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">Login</string>
-    <string name="title_activity_detail">DetailActivity</string>
+    <string name="title_activity_comments">Comments</string>
+    <string name="sample_message">This is the sample message that crosses over in two lines and goes on for a while.</string>
 </resources>
