--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="title_activity_comments">Comments</string>
     <string name="sample_message">This is the sample message that crosses over in two lines and goes on for a while.</string>
     <string name="title_activity_add_comment">Post a comment</string>
+    <string name="title_activity_regiter">RegiterActivity</string>
 </resources>
