--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="sample_message">This is the sample message that crosses over in two lines and goes on for a while.</string>
     <string name="title_activity_add_comment">Post a comment</string>
     <string name="title_activity_check_email">Check email</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
