--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
     <string name="title_activity_add_comment">Post a comment</string>
     <string name="title_activity_check_email">Check email</string>
 
+    <string name="search_title">Search</string>
+    <string name="search_hint">Search</string>
+    <string name="title_activity_search">SearchActivity</string>
+
 </resources>
