--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,8 @@
     <string name="search_hint">Search</string>
     <string name="title_activity_search">SearchActivity</string>
 
+    <string name="loginScreen">/loginScreen</string>
+    <string name="homeScreen">/homeScreen</string>
+    <string name="viewPostScreen">/viewPostScreen</string>
+
 </resources>
