Add instructions screen to post idea

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="loginScreen">/loginScreen</string>
     <string name="homeScreen">/homeScreen</string>
     <string name="viewPostScreen">/viewPostScreen</string>
+    <string name="title_activity_post_idea_welcome">PostIdeaWelcomeActivity</string>
 
 </resources>
